# django-v5-starter-template-with-poetry

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  aws_deployment.txt  docker-compose.dev.yaml  docker-compose.yaml  poetry.txt  pyproject.toml
.github/workflows/: main.yaml  pr.yaml
core/: conftest.py  manage.py
core/backend/: __init__.py  apps.py  asgi.py  checks.py  urls.py  views.py  wsgi.py
core/backend/settings/: __init__.py  base.py  custom.py  dev.py  docker.py  env_vars.py  logging.py  prod.py  test.py
core/backend/settings/templates/: settings.dev.py  settings.github.py  settings.unittest.py
core/backend/tests/: test_checks.py  test_views.py
core/general/tests/fixtures/: __init__.py  misc.py
core/general/utils/: collections.py  cryptography.py  misc.py  pytest.py  settings.py  types.py
core/templates/: base.html
core/templates/pages/: home.html
local/: .gitkeep  README.md  __init__.py
scripts/: docker-healthcheck.py  entrypoint.sh  generate_prod_data.py
