[tool.poetry]
name = "django_template"
version = "0.1.0"
description = "Django v4.2 starter project"
authors = ["allhailpython <allhailpython@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.9"
django-environ = "^0.11.2"
django-filter = "^23.5"
django-split-settings = "^1.2.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pynacl = "^1.5.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.0"
model-bakery = "^1.17.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-django = "^4.7.0"
pytest-xdist = "^3.5.0"

[tool.isort]
line_length = 119
multi_line_output = 5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["backend"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
